# simple_prj

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/algorithm/: include.h
dependencies/algorithm/impl/: algorithm.c
dependencies/bit_set/: include.h
dependencies/bit_set/impl/: bit_set.c
dependencies/data_types/: CMakeLists.txt
dependencies/data_types/matrix/: include.h
dependencies/data_types/matrix/impl/: matrix.c
dependencies/data_types/string/: include.h
dependencies/data_types/string/impl/: string.c
dependencies/data_types/vdvector/: include.h
dependencies/data_types/vdvector/impl/: vdvector.c
dependencies/data_types/vector/: include.h
dependencies/data_types/vector/impl/: vector.c
dependencies/exceptions/: include.h
dependencies/exceptions/impl/: exceptions.c
dependencies/file_manager/: include.h
dependencies/file_manager/impl/: file_manager.c
dependencies/ordered_set/: include.h
dependencies/ordered_set/impl/: ordered_set.c
dependencies/unordered_set/: include.h
dependencies/unordered_set/impl/: unordered_set.c
src/: main.c  main.h
src/branches/: CMakeLists.txt
src/branches/lab1/: CMakeLists.txt
src/branches/lab1/tests/: include.h
src/branches/lab2/: CMakeLists.txt
src/branches/lab2/entry/: include.h
src/branches/lab2/tests/: include.h
src/branches/lab3/: CMakeLists.txt
src/branches/lab4/: CMakeLists.txt
src/branches/lab5/: CMakeLists.txt
src/branches/lab6/: CMakeLists.txt
src/branches/lab7/: CMakeLists.txt
src/branches/lab8/: CMakeLists.txt
(+26 files in other folders)
